plugins {
    id "base"
    id "idea"
    id "com.gorylenko.gradle-git-properties"
    id "com.github.ben-manes.versions" version "0.51.0"
}

description = "The flexible configurable crm service"

assert System.properties["java.specification.version"] == "21" || "22" || "23"

allprojects {
    group = 'io.flexwork'
    repositories {
        mavenCentral()
    }

    subprojects {
        afterEvaluate {
            if (it.plugins.hasPlugin('java') || it.plugins.hasPlugin('java-library')) {
                java {
                    sourceCompatibility=21
                    targetCompatibility=21
                }
            }
        }
    }

    gitProperties {
        failOnNoGitDirectory = false
        keys = ["git.branch", "git.commit.id.abbrev", "git.commit.id.describe"]
    }

    tasks.withType(com.gorylenko.GenerateGitPropertiesTask).configureEach {
        outputs.doNotCacheIf("Task is always executed") { true }
    }
}